Fix horizontal scroll on page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,156 +1,157 @@
 :root {
-    --primary-color: #4de8fc;
-    --secondary: #c0c9cf;
-    --danger-color: #ff554f;
-    --bg-color: #050507;
-    --secondary-bg: #0c0d15;
-    --border-color: #4054c8;
-    --secondary-text: #bbc5ff;
-    font-family: "ApexMk2", sans-serif;
-    color: white;
-    background-color: var(--bg-color);
+  --primary-color: #4de8fc;
+  --secondary: #c0c9cf;
+  --danger-color: #ff554f;
+  --bg-color: #050507;
+  --secondary-bg: #0c0d15;
+  --border-color: #4054c8;
+  --secondary-text: #bbc5ff;
+  font-family: "ApexMk2", sans-serif;
+  color: white;
+  background-color: var(--bg-color);
+  overflow: hidden;
 }
 
 @font-face {
-    font-family: "ApexMk2";
-    src: url("assets/ApexMk2-Regular.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "ApexMk2";
+  src: url("assets/ApexMk2-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "ApexMk2";
-    src: url("assets/ApexMk2-BoldExtended.otf") format("opentype");
-    font-weight: bold;
-    font-style: normal;
+  font-family: "ApexMk2";
+  src: url("assets/ApexMk2-BoldExtended.otf") format("opentype");
+  font-weight: bold;
+  font-style: normal;
 }
 
 input,
 textarea {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .full-cover {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .underlined {
-    font-family: "ApexMk2", monospace;
-    font-size: 1rem;
-    letter-spacing: 1px;
+  font-family: "ApexMk2", monospace;
+  font-size: 1rem;
+  letter-spacing: 1px;
 
-    border: none;
-    background-color: transparent;
-    color: var(--secondary);
-    padding: 4px 8px;
-    border-bottom: 1px solid var(--secondary);
+  border: none;
+  background-color: transparent;
+  color: var(--secondary);
+  padding: 4px 8px;
+  border-bottom: 1px solid var(--secondary);
 }
 
 .outlined {
-    font-family: "ApexMk2", monospace;
-    font-size: 1rem;
-    letter-spacing: 1px;
+  font-family: "ApexMk2", monospace;
+  font-size: 1rem;
+  letter-spacing: 1px;
 
-    background-color: rgba(0, 0, 0, 0.5);
-    border: 1px solid var(--secondary);
-    color: var(--secondary);
-    padding: 16px;
-    width: 100%;
-    box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--secondary);
+  color: var(--secondary);
+  padding: 16px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .outlined.blue {
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
 .highlight {
-    font-family: "ApexMk2", monospace;
-    font-size: 1rem;
-    letter-spacing: 1px;
+  font-family: "ApexMk2", monospace;
+  font-size: 1rem;
+  letter-spacing: 1px;
 
-    background-color: #444;
-    padding: 8px;
-    color: white;
-    letter-spacing: 1px;
-    display: inline-block;
+  background-color: #444;
+  padding: 8px;
+  color: white;
+  letter-spacing: 1px;
+  display: inline-block;
 }
 
 .vignette {
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(
-        ellipse at center,
-        rgba(0, 0, 0, 0) 50%,
-        rgba(0, 0, 0, 1) 90%,
-        rgba(0, 0, 0, 1) 100%
-    );
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 1) 90%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 h1 {
-    color: var(--primary-color);
-    margin: 0;
+  color: var(--primary-color);
+  margin: 0;
 }
 
 button {
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
 }
 
 textarea {
-    font-family: monospace;
-    font-size: 0.8rem;
-    outline: none;
-    background-color: rgba(50, 50, 50, 0.8);
-    color: var(--secondary);
-    border: 1px solid #aaa;
-    padding: 12px;
+  font-family: monospace;
+  font-size: 0.8rem;
+  outline: none;
+  background-color: rgba(50, 50, 50, 0.8);
+  color: var(--secondary);
+  border: 1px solid #aaa;
+  padding: 12px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ::placeholder {
-    color: var(--secondary);
+  color: var(--secondary);
 }
 
 .row {
-    display: flex;
+  display: flex;
 }
 
 .row.wrap {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .message {
-    padding: 0.75rem;
-    text-align: center;
-    color: lime;
-    background-color: rgba(0, 100, 0, 0.8);
-    border-right: 3px solid lime;
-    letter-spacing: 1px;
+  padding: 0.75rem;
+  text-align: center;
+  color: lime;
+  background-color: rgba(0, 100, 0, 0.8);
+  border-right: 3px solid lime;
+  letter-spacing: 1px;
 }
 
 .message.negative {
-    color: red;
-    background-color: rgba(100, 0, 0, 0.8);
-    border-right: 3px solid red;
+  color: red;
+  background-color: rgba(100, 0, 0, 0.8);
+  border-right: 3px solid red;
 }
 
 #file-drop-overlay {
